= Release-Notes



== 2.0 (SNAPSHOT)

* Fachwerte mit String-Attributen wurden überarbeitet, um den Speicherbedarf zu reduzieren (Vermeidung von String-Duplikaten)
* beim Aufruf der of()-Methode werden Duplikate ebenfalls vermieden
* Methoden, die als @deprecated gekennzeichnet sind, wurden entfernt.



== 1.1 (16-Dez-2018)

* med-Package für Klassen aus dem Krankenkassen-Bereich eingeführt
* Text-Klasse kann jetzt auch die http://rosettacode.org/wiki/Levenshtein_distance[Levenshtein-Distanz] berechnen
* Bereitstellung von of()-Methoden auch in der Geldbetrag-Klasse
* API der Geldbetrag-Klasse an die Money-Klasse aus der Referenz-Implemntierung (org.javamoney.moneta)
* #_neu_#: Reduktion des Speicherbedarfs der Waehrung-Klasse und Performance-Optimierung (Laufzeit des TCKs von 50 Sek. auf ca. 3 Sek. reduziert)



== 1.0 (22-Sep-2018)

* #_neu_#: Unterstützung von http://javamoney.github.io/api.html[JSR-354] (Money und Currency API) durch eine Geldbetrag- und Waehrung-Klasse.
  Ziel ist es, den schwierigen Umgang mit Geldbeträgen zu vereinfachen.
  Bis auf https://github.com/JavaMoney/jsr354-tck/issues/18[einen Test] wird das https://github.com/JavaMoney/jsr354-tck[JSR354-TCK] eingehalten.
* #_neu_#: JSON-Serialisierung (erfordert Einbindung von jackson-databind als abhängige Bibliothek)



== 0.7 (12-Apr-2018)

* #_verbessert_#: Speicherverbrauch wurde teilweise drastisch reduziert.
  Dazu wurde intern auf PackedDecimal aus 0.6 zurückgegriffen, soweit möglich.
* #_neu_#: TinyUUID als kleine Schwester zur UUID - reduziert den Platzbedarf um 63% (als String)
* #_fixed_ https://github.com/oboehm/jfachwert/issues/5[#5]#: Fehler mit "Illegal base64 character 2d" in TinyUUID.fromString(..) (*v0.7.1*)



== 0.6 (2-Apr-2018)

* #_neu_#: ein math-Paket mit Nummer-, Bruch- und PackedDecimal-Klasse.
  Der Datentyp http://acc-gmbh.com/dochtml/Datentypen4.html[PackedDecimal] speichert die einzelnen Ziffern in Nibbles ab
  und ist eine Reminenzenz an das gute alte COBOL.